# Vanadium

./: .gitignore  0001-switch-to-fstack-protector-strong.patch  0001-use-64-bit-WebView-processes.patch  0002-remove-mremap-from-the-system-call-whitelist.patch  0002-switch-to-fstack-protector-strong.patch  0002-use-64-bit-Monochrome-processes.patch  0003-Add-chrome_modern_public_apk-target.patch  0003-always-use-the-WebView-sandbox.patch  0003-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0003-switch-to-fstack-protector-strong.patch  0004-Vanadium-branding.patch  0004-always-use-the-WebView-sandbox.patch  0004-disable-navigation-error-correction-by-default.patch  0004-disable-seed-based-field-trials.patch  0004-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0005-Vanadium-branding-for-GrapheneOS.patch  0005-Vanadium-branding-for-WebView.patch  0005-Vanadium-branding.patch  0005-disable-contextual-search-by-default.patch  0005-disable-navigation-error-correction-by-default.patch  0005-disable-seed-based-field-trials.patch  0005-migrate-package-name-to-org.grapheneos.vanadium.patch  0006-Chromium-Vanadium-rebranding.patch  0006-Vanadium-branding.patch  0006-disable-contextual-search-by-default.patch  0006-disable-navigation-error-correction-by-default.patch  0006-disable-network-prediction-by-default.patch  0006-hide-passwords.google.com-link-when-not-supported.patch  0006-remove-Help-feedback-menu-entry.patch  0007-Chrome-Vanadium-rebranding.patch  0007-disable-contextual-search-by-default.patch  0007-disable-first-run-welcome-page.patch  0007-disable-metrics-by-default.patch  0007-disable-network-prediction-by-default.patch  0007-hide-passwords.google.com-link-when-not-supported.patch  0007-remove-Help-feedback-menu-entry.patch  0008-disable-first-run-welcome-and-data-saver-pages.patch  0008-disable-first-run-welcome-page.patch  0008-disable-hyperlink-auditing-by-default.patch  0008-disable-metrics-by-default.patch  (+286 more)
patches/: 0001-android-upstream-missed-manifest-changes-for-Q-R.patch  0001-disable-checkout_nacl.patch  0001-use-64-bit-WebView-processes.patch  0002-Vanadium-branding.patch  0002-switch-to-fstack-protector-strong.patch  0002-use-64-bit-WebView-processes.patch  0003-Vanadium-branding-for-WebView.patch  0003-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0003-switch-to-fstack-protector-strong.patch  0004-Support-for-extended-version-name-and-increments.patch  0004-Vanadium-branding.patch  0004-disable-checkout_nacl.patch  0004-enable-ftrivial-auto-var-init-zero.patch  0004-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0005-Vanadium-branding-for-WebView.patch  0005-Vanadium-branding.patch  0005-disable-broken-warning-for-auto-var-init.patch  0005-enable-ftrivial-auto-var-init-zero.patch  0005-temporary-Workaround-for-crashes-at-StackTrace-calls.patch  0005-use-64-bit-WebView-processes.patch  0006-Vanadium-branding-for-WebView.patch  0006-Vanadium-branding.patch  0006-disable-broken-warning-for-auto-var-init.patch  0006-use-64-bit-WebView-processes.patch  0007-Vanadium-branding-for-WebView.patch  0007-Vanadium-branding.patch  0007-enable-stack-clash-protection-for-arm64-targets.patch  0007-remove-Google-prefix-from-storage-settings-label.patch  0007-remove-Help-feedback-menu-entry.patch  0007-switch-to-fstack-protector-strong.patch  0008-Remove-logo-from-chrome-version.patch  0008-Vanadium-branding-for-WebView.patch  0008-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0008-hide-passwords.google.com-link-when-not-supported.patch  0008-remove-Google-prefix-from-storage-settings-label.patch  0008-remove-Help-feedback-menu-entry.patch  0008-switch-to-fstack-protector-strong.patch  0009-Remove-logo-from-chrome-version.patch  0009-disable-first-run-welcome-page.patch  0009-enable-ftrivial-auto-var-init-zero.patch  (+2511 more)
