target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "116.0.5845.114"
android_default_version_code = "584511400"

ext_version_enabled = true
ext_version_increment = "1"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
disable_fieldtrial_testing_config = true

dfmify_dev_ui = false

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true
use_cfi_cast = true
# This feature currently doesn't work with with is_cfi=true,
# see the now deleted recent patch for M109 when this flag wasn't added.
use_relative_vtables_abi = false

enable_gvr_services = false
enable_vr = false
enable_arcore = false
enable_openxr = false
enable_cardboard = false
enable_remoting = false
enable_reporting = false

trichrome_certdigest = "c6adb8b83c6d4c17d292afde56fd488a51d316ff8f2c11c5410223bff8a7dbb3"

chrome_public_manifest_package = "app.vanadium.browser"
system_webview_package_name = "app.vanadium.webview"
trichrome_library_package = "app.vanadium.trichromelibrary"
