target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "137.0.7151.72"
android_default_version_code = "715107200"

ext_version_enabled = true
ext_version_increment = "1"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
disable_fieldtrial_testing_config = true

dfmify_dev_ui = false

# Restore M125 and older behavior of Password Manager settings,
# which is Play services independent. This feature is planned
# to be deprecated in 6 months, based on
# https://chromium-review.googlesource.com/c/chromium/src/+/5493819
use_login_database_as_backend = true

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true
use_cfi_cast = true
# This feature currently doesn't work with with is_cfi=true,
# see the now deleted recent patch for M109 when this flag wasn't added.
use_relative_vtables_abi = false
# This flag was enabled as of M127, and doesn't compile as intended, contrary to upstream documentation.
# When enabled, this increases the build time by approximately 50% without substantial benefits.
include_both_v8_snapshots = false

enable_vr = false
enable_arcore = false
enable_openxr = false
enable_cardboard = false
enable_remoting = false
enable_reporting = false

trichrome_certdigest = "c6adb8b83c6d4c17d292afde56fd488a51d316ff8f2c11c5410223bff8a7dbb3"

chrome_public_manifest_package = "app.vanadium.browser"
system_webview_package_name = "app.vanadium.webview"
trichrome_library_package = "app.vanadium.trichromelibrary"

config_apk_package = "app.vanadium.config"
config_apk_certdigest = "c6adb8b83c6d4c17d292afde56fd488a51d316ff8f2c11c5410223bff8a7dbb3"
config_apk_version_name = "96"
config_apk_version_code = "96"
config_apk_is_debug = false

# Only enable secondary arch support for arm64, reducing build time and apk size elsewhere
enable_android_secondary_abi = target_cpu == "arm64"

# Explicitly disable static analysis as intended for official builds.
# See //build/config/android/config.gni line 90-92 as of M136
# Without this, autoninja unnecessarily prints warnings on some build environment.
android_static_analysis = "off"
